# symbolic-scribe

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml
assets/: abstract-algebra-QCETpj6I.js  blueteam-input-firewall-nSau05SF.js  blueteam-output-schema-lock-qZmSEFGY.js  blueteam-refusal-scaffold-BOYj-iFC.js  blueteam-tool-allowlist-ClNA3lv7.js  category-theory-DofqW2vE.js  complex-analysis-YoJ4RoGO.js  index-C7L75laY.css  index-DgLHhsgf.js  mathematical-logic-CJNUyidW.js  number-theory-DfYETbZZ.js  prompt_forge_bg-DvJwl-et.wasm  redteam-data-exfiltration-BvbXJn8T.js  redteam-prompt-injection-CITjW2Mp.js  redteam-system-exfiltration-Bm82jnsq.js  redteam-tool-abuse-BoIrw--T.js  ruvector_wasm-DWI5_HfB.js  ruvector_wasm_bg-BwMot0gI.wasm  ruvllm_wasm-iyqquSce.js  ruvllm_wasm_bg-Dt7ZunwO.wasm  set-theory-BDtxnN82.js  symbolic-systems-BKtW3O_W.js  systematic-suppression-CJ2a6_TV.js  topology-2SmQgfFu.js
docs/: ruvector-integration.md
docs/adr/: ADR-001-promptops-compiler.md  ADR-002-live-fusion-benchmark.md
harness/: CLAUDE.md  README.md  package-lock.json  package.json
harness/.claude-plugin/: plugin.json
scripts/: bench-fusion.mjs  bench-fusion.sh
src/: App.tsx
wasm/: build.sh
wasm/prompt-forge/: Cargo.toml  README.md
wasm/prompt-forge/examples/: bench.rs  validate.rs
wasm/prompt-forge/src/: ambiguity.rs  ast.rs  compile.rs  compress.rs  constraints.rs  diff.rs  drift.rs  intent.rs  lib.rs  model.rs  receipt.rs  risk.rs  route.rs  safety.rs  schema.rs  score.rs  sha256.rs  token.rs
(+36 files in other folders)
