[package]
name = "prompt-forge"
version = "0.1.0"
edition = "2021"
description = "Low-latency prompt compiler & multi-objective optimizer (Rust → WASM) for Symbolic Scribe"
license = "MIT"
repository = "https://github.com/ruvnet/symbolic-scribe"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.100"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# (native tests only need std + the crate itself)

# Aggressively optimize the wasm artifact for size + speed.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# A separate, fast profile for native `cargo test` / benchmarks.
[profile.bench]
opt-level = 3
lto = "thin"
